reset margins for GThumb+ so it's properly aligned with other containers. Fixes #109

--- a/scss/theme/_plugin-fixes.scss
+++ b/scss/theme/_plugin-fixes.scss
@@ -19,6 +19,10 @@ ul.thumbnails,
 ul#thumbnails {
   padding-left: 0px;
 }
+ul#thumbnails:not(.thumbnails) {
+  margin-left: -10px;
+  margin-right: -10px;
+}
 ul#thumbnails .gthumb a img.thumbnail {
   border-radius: 0;
   background: none;
@@ -31,10 +35,11 @@ ul#thumbnails .gthumb a img.thumbnail {
 .pwg-icon-globe {
   font-family: none !important;
   line-height: none !important;
-}
-.pwg-icon-globe:before {
-  content:""\f0ac"";
-  font-family:"FontAwesome";
+
+  &:before {
+    content:""\f0ac"";
+    font-family:"FontAwesome";
+  }
 }
 
 /* BatchDownloader */
@@ -55,12 +60,16 @@ ul#thumbnails .gthumb a img.thumbnail {
   padding: 10px;
   color: #4f4f4f;
   background-color: #fff;
-}
-#collectionsDropdown a { color: #4f4f4f; }
-#collectionsDropdown a:hover {
-  color: #262626; 
-  text-decoration: none;
-  background-color: #f5f5f5;
+
+  a {
+    color: #4f4f4f;
+
+    &:hover {
+      color: #262626; 
+      text-decoration: none;
+      background-color: #f5f5f5;
+    }
+  }
 }
 .nav .user-collections-icon,
 #theCollectionPage .nav .user-collections-share-icon,
